@@ -156,6 +156,16 @@
     </listitem>
 
     <listitem>
+      <para>2007-07-18</para>
+      <itemizedlist>
+        <listitem>
+          <para>[dnicholson] - Described the configuration of the consolelog
+          bootscript.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2007-06-12</para>
       <itemizedlist>
         <listitem>
@@ -177,7 +187,7 @@
         <listitem>
           <para>[ken] - Upgrade to tar-1.17, fixes
           <ulink url="&lfs-ticket-root;2029">#2029</ulink>.</para>
-	</listitem>
+        </listitem>
       </itemizedlist>
     </listitem>
 
